--- a/packages/bucket-ts/package.json
+++ b/packages/bucket-ts/package.json
@@ -9,9 +9,12 @@
     "build": "tsc"
   },
   "dependencies": {
-    "ajv": "^6.12.2"
+    "ajv": "^6.12.2",
+    "recursive-readdir": "^2.2.2"
   },
   "devDependencies": {
+    "@types/node": "^14.0.14",
+    "@types/recursive-readdir": "^2.2.0",
     "typescript": "^3.9.5"
   }
 }
