--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: yarn -v
+    - run: npm install -g yarn && yarn --version
     - run: yarn set version berry
     - run: yarn
     - run: yarn run build
