--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,16 +14,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-#        node-version: [10.x, 12.x, 14.x]
+   #     node-version: [10.x, 12.x, 14.x]
         node-version: [14.x]
-    steps:
+   steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install -g yarn && yarn --version
-    - run: yarn set version berry
     - run: yarn
-    - run: yarn run build
-    - run: yarn run test
+    - run: yarn build
+    - run: yarn test
