--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start-minio": "./start-minio.sh", 
+    "start-minio": "./start-minio.sh",
     "load-env": "source ~/bucket-ts.env",
     "build": "yarn workspaces foreach run build",
-    "test": "yarn workspaces foreach run test"
+    "test": "yarn workspaces foreach run test",
+    "docs": "typedoc"
   },
   "files": [
     "build/**",
@@ -22,5 +23,8 @@
   "dependencies": {
     "@yarnpkg/pnpify": "^2.0.0-rc.25",
     "typescript": "^3.9.5"
+  },
+  "devDependencies": {
+    "typedoc": "next"
   }
 }
