--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   ],
   "dependencies": {
     "@yarnpkg/pnpify": "2.1.0",
+    "semantic-release": "^17.1.1",
+    "semantic-release-monorepo": "^7.0.2",
     "typescript": "3.9.7"
   },
   "devDependencies": {
