--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -35,3 +35,4 @@ jobs:
         MINIO_ENDPOINT: ${{ secrets.MINIO_ENDPOINT }}
         ABS_CONNECTION_STRING: ${{ secrets.ABS_CONNECTION_STRING }}
     - run: yarn docs
+    - run: yarn run release
