--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -25,7 +25,6 @@ jobs:
     - run: yarn
     - run: yarn build
     - run: yarn start-minio && yarn test
-    - run: yarn release
       env:
         GCS_CLIENT_EMAIL: ${{ secrets.GCS_CLIENT_EMAIL }}
         GCS_PRIVATE_KEY: ${{ secrets.GCS_PRIVATE_KEY }}
@@ -35,5 +34,7 @@ jobs:
         MINIO_SECRET_ACCESS_KEY: ${{ secrets.MINIO_SECRET_ACCESS_KEY }}
         MINIO_ENDPOINT: ${{ secrets.MINIO_ENDPOINT }}
         ABS_CONNECTION_STRING: ${{ secrets.ABS_CONNECTION_STRING }}
+    - run: yarn release
+      env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
     - run: yarn docs
