--- a/packages/bucket-ts-s3/package.json
+++ b/packages/bucket-ts-s3/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "author": "ian.b.taylor@gmail.com",
   "license": "MIT",
+  "repository": "https://github.com/itaylor/bucket-ts",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
