--- a/packages/bucket-ts/package.json
+++ b/packages/bucket-ts/package.json
@@ -7,7 +7,8 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "release": "semantic-release -e semantic-release-monorepo"
   },
   "dependencies": {
     "ajv": "^6.12.2",
