--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -37,4 +37,5 @@ jobs:
     - run: yarn release
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     - run: yarn docs
