--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,6 +1,9 @@
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
 
-yarnPath: .yarn/releases/yarn-2.2.2.cjs
 pnpMode: loose
+
+yarnPath: .yarn/releases/yarn-2.4.0.cjs
