--- a/packages/bucket-ts-folder/package.json
+++ b/packages/bucket-ts-folder/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build-schema": "ts-json-schema-generator --path 'types.ts' --type 'FolderBucketOptions' > optionsSchema.json",
     "build": "yarn build-schema && tsc",
-    "release": "semantic-release -e semantic-release-monorepo"
+    "release": "semantic-release"
   },
   "devDependencies": {
     "@types/mkdirp": "1.0.1",
