--- a/packages/bucket-ts/package.json
+++ b/packages/bucket-ts/package.json
@@ -8,7 +8,7 @@
   "types": "build/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "release": "semantic-release -e semantic-release-monorepo"
+    "release": "semantic-release"
   },
   "dependencies": {
     "ajv": "^7.0.2",
