--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "tests"
   ],
   "dependencies": {
+    "multi-semantic-release": "^2.6.0",
     "typescript": "4.1.3"
   },
   "devDependencies": {
