--- a/packages/bucket-ts-folder/package.json
+++ b/packages/bucket-ts-folder/package.json
@@ -15,7 +15,7 @@
     "@types/mkdirp": "1.0.1",
     "@types/node": "14.14.19",
     "@types/recursive-readdir": "2.2.0",
-    "bucket-ts": "portal:../bucket-ts",
+    "bucket-ts": "*",
     "ts-json-schema-generator": "0.82.0",
     "typescript": "4.1.3"
   },
