--- a/packages/bucket-ts-gcs/package.json
+++ b/packages/bucket-ts-gcs/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@types/node": "14.14.19",
-    "bucket-ts": "portal:../bucket-ts",
+    "bucket-ts": "*",
     "ts-json-schema-generator": "0.82.0",
     "typescript": "4.1.3"
   },
