--- a/packages/bucket-ts-s3/package.json
+++ b/packages/bucket-ts-s3/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@types/aws-sdk": "2.7.0",
     "@types/node": "14.14.19",
-    "bucket-ts": "portal:../bucket-ts",
+    "bucket-ts": "*",
     "ts-json-schema-generator": "0.82.0",
     "typescript": "4.1.3"
   },
@@ -22,6 +22,6 @@
     "bucket-ts": "*"
   },
   "dependencies": {
-    "aws-sdk": "^2.816.0"
+    "aws-sdk": "^2.821.0"
   }
 }
