--- a/.releaserc
+++ b/.releaserc
@@ -1,9 +1,11 @@
 { 
-  "extends": "semantic-release-monorepo",
   "plugins":[
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/npm",
     ["@semantic-release/git", {
-    "assets": ["package.json"],
-    "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-   }]
+      "assets": ["package.json", "docs/", "**/package.json"],
+      "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+    }]
   ]
 }
